# ally-bazzite-minecraft-bedrock-launcher

./: .gitignore  CMakeLists.txt  README.md  src_CMakeLists.txt  src_main.cpp
.github/workflows/: build.yml  github_workflows_build.yml
flatpak/: com.github.torporsche.ally-mc-launcher.yml
resources/: CMakeLists.txt
resources/config/: default_config.json  error_messages.json  input_config.json  performance_profiles.yml  shader_optimization.yml  ui_layout.yml
resources/desktop/: ally-mc-launcher.desktop
resources/gamepad/: ally_default.vdf
resources/pkg-config/: ally-mc-launcher.pc.in
resources/udev/: 99-rog-ally.rules
scripts/: build.sh  check_dependencies.sh  reorganize_repo.sh  run_tests.sh  setup_prerequisites.sh  setup_rog_ally.sh  setup_steam.sh  setup_test_env.sh  test_build.sh
src/: CMakeLists.txt  main.cpp
src/auth/: GooglePlayAPI.cpp  GooglePlayAuth.cpp  GooglePlayAuth.hpp  src_auth_GooglePlayAPI.hpp
src/core/: Config.cpp  Config.hpp
src/game/: GameManager.cpp  GameManager.hpp  src_game_GameManager.hpp
src/gamepad/: AllySystemControl.cpp  AllySystemControl.hpp  src_gamepad_AllyGamepad.cpp  src_gamepad_AllyGamepad.hpp  src_gamepad_AllySystemControl.cpp  src_gamepad_AllySystemControl.hpp
src/steam/: SteamBPMIntegration.cpp  SteamBPMIntegration.hpp  SteamIntegration.cpp  SteamIntegration.hpp  src_steam_SteamIntegration.cpp
src/ui/: LauncherWindow.cpp  LauncherWindow.hpp  SettingsDialog.cpp  SettingsDialog.hpp  src_launcher_LauncherWindow.hpp  src_ui_VersionInstallDialog.cpp  src_ui_VersionInstallDialog.hpp
tests/: CMakeLists.txt  TestSuite.cpp  TestSuite.hpp
